fix(core): `Dialogs` fix fixed position on iOS 26

--- a/projects/addon-doc/components/internal/header/index.less
+++ b/projects/addon-doc/components/internal/header/index.less
@@ -2,7 +2,7 @@
 
 :host {
     position: fixed;
-    top: 0;
+    top: var(--tui-viewport-y);
     left: 0;
     right: 0;
     // fix for Safari to prevent tabs underline above sidebar
