--- a/projects/core/components/dialog/dialogs.style.less
+++ b/projects/core/components/dialog/dialogs.style.less
@@ -4,6 +4,7 @@
     .fullsize(fixed);
     .scrollbar-hidden();
 
+    top: var(--tui-viewport-y);
     pointer-events: none;
     overflow: hidden;
     overscroll-behavior: none;
